documentation/web/versioned_docs/version-0.0.18/user/cli/klio_get-wal.md
---
title: klio get-wal
---

## klio get-wal

Get a WAL from the target Klio server

```
klio get-wal [wal-name] [target-file] [flags]
```

### Options

```
  -h, --help          help for get-wal
      --partial       Use a partial WAL file if a the completed WAL file is not present. Defaults to false
      --tier string   The tier where we should look for WAL. Accepted values: 'tier1' and 'tier2' (default "tier1")
```

### Options inherited from parent commands

```
      --config string                     config file (default is $HOME/.klio.yaml)
      --debug                             enable debug logging
      --log-destination string            where the log stream will be written
      --log-field-level string            JSON log field to report severity in (default: level)
      --log-field-timestamp string        JSON log field to report timestamp in (default: ts)
      --log-level string                  the desired log level, one of error, info, debug and trace (default "info")
      --pprof-server string               enable the PPROF server using the specified address
      --zap-devel                         Development Mode defaults(encoder=consoleEncoder,logLevel=Debug,stackTraceLevel=Warn). Production Mode defaults(encoder=jsonEncoder,logLevel=Info,stackTraceLevel=Error)
      --zap-encoder encoder               Zap log encoding (one of 'json' or 'console')
      --zap-log-level level               Zap Level to configure the verbosity of logging. Can be one of 'debug', 'info', 'error', 'panic' or any integer value > 0 which corresponds to custom debug levels of increasing verbosity
      --zap-stacktrace-level level        Zap Level at and above which stacktraces are captured (one of 'info', 'error', 'panic').
      --zap-time-encoding time-encoding   Zap time encoding (one of 'epoch', 'millis', 'nano', 'iso8601', 'rfc3339' or 'rfc3339nano'). Defaults to 'epoch'.
```

### SEE ALSO

* [klio](klio.md)	 - PostgreSQL Backup & Recovery for CloudNativePG

